<resources>
    <string name="app_name">Patient Tracking</string>

    <string name="tab_sign_in">Login</string>
    <string name="tab_sign_up">Sign up</string>

    <string name="title_email_address">Email address</string>
    <string name="title_password">Password</string>
    <string name="title_forget_password">Forget password?</string>
    <string name="title_re_type_password">Re-type password</string>

    <string name="title_select_user_type">Select user type</string>

    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_appointments">Appointments</string>
    <string name="nav_patients">Patients</string>
    <string name="title_overview">Overview</string>
    <string name="title_phone">Phone</string>
    <string name="hint_phone">01234567890</string>
    <string name="hint_name">Patient Name</string>
    <string name="demo_mail">test2@gmail.com</string>
    <string name="title_email">Email</string>
    <string name="title_blood">Blood Group</string>
    <string name="hint_b_ve">B+(ve)</string>
    <string name="title_location">Location</string>
    <string name="title_age">Age</string>
    <string name="hint_age">18</string>
    <string name="hint_district">district</string>
    <string name="title_available_doctors">Available Doctors</string>
    <string name="welcome_message">Welcome to Patient Care</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="title_patient_appointments">Appointments I took</string>
    <string name="hint_about">About</string>
    <string name="expertise">expertise</string>
    <string name="degree">degree</string>
    <string name="doctor_name">doctor name</string>
    <string name="hint_date">14/06/2021</string>

</resources>