<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".doctor.fragments.PatientProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--    background-->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_a_day_at_park"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_female"
            app:civ_border_color="@color/gray"
            app:civ_border_width="0.6dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.59000003" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hint_color"
            android:fontFamily="@font/mina"
            android:hint="@string/hint_name"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintEnd_toStartOf="@+id/iv_profile"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/iv_profile"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/mina"
            android:text="@string/title_overview"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lt_profile"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAlignment="textEnd">

                <TextView
                    android:id="@+id/tv_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/mina"
                    android:text="@string/title_phone"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mina"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_phone_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".92"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_phone_title" />

                <TextView
                    android:id="@+id/tv_age_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/mina"
                    android:text="@string/title_age"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_phone_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <TextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mina"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_age_title"
                    app:layout_constraintEnd_toEndOf="@+id/tv_phone"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_age_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_age_title"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/tv_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/mina"
                    android:text="@string/title_email"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_age_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_age" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:backgroundTint="@color/hint_color"
                    android:fontFamily="@font/mina"
                    android:hint=""
                    android:maxLines="2"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_email_title"
                    app:layout_constraintEnd_toEndOf="@+id/tv_age"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_email_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_email_title"
                    tools:ignore="Autofill" />

                <TextView
                    android:id="@+id/tv_bg_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/mina"
                    android:text="@string/title_blood"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_email_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_email" />

                <TextView
                    android:id="@+id/tv_blood"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/mina"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    app:layout_constraintWidth_percent=".3"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_bg_title"
                    app:layout_constraintEnd_toEndOf="@+id/tv_email"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_bg_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_bg_title" />

                <TextView
                    android:id="@+id/tv_location_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/title_location"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_bg_title"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bg_title" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:backgroundTint="@color/hint_color"
                    android:maxLines="2"
                    android:text=""
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_location_title"
                    app:layout_constraintEnd_toEndOf="@+id/tv_blood"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/tv_location_title"
                    app:layout_constraintTop_toTopOf="@+id/tv_location_title"
                    tools:ignore="Autofill,TextFields" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>